--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "ejs": "^3.1.5",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "jest": "^26.6.3"
