--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
-"dependencies": {
-  "express": "^4.17.1",
-  "express-session": "^1.17.1",
-  "ejs": "^3.1.5",
-  "bcryptjs": "^2.4.3",
-  "dotenv": "^8.2.0"
+{
+  "name": "my-project",
+  "version": "1.0.0",
+  "description": "A web filtering website",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "body-parser": "^1.19.0"
+  }
 }
